--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
-
 allprojects {
-    
+
     group 'com.github.wenzhucjy'
     version '1.0-SNAPSHOT'
 
@@ -15,22 +14,17 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
     //apply plugin: 'checkstyle'
-    
+
     compileJava.options.encoding = 'UTF-8'
 
     repositories {
-
         // 依赖是从本地的Maven仓库中获取的
-        //        mavenLocal()
-        //        mavenCentral()
-
-       //  maven {
-        //     url "http://172.16.100.95:8091/nexus/content/groups/public/"
-       //  }
-        //使用开源中国的maven仓库
-       maven {
-            url 'http://maven.oschina.net/content/groups/public/' 
-       }
+        mavenLocal()
+//        mavenCentral()
+        maven {
+            //nexus 仓库地址
+            url "http://172.16.100.95:8091/nexus/content/groups/public/"
+        }
     }
 
     sourceCompatibility = 1.8
@@ -41,11 +35,11 @@ subprojects {
         guavaVersion = '19.0'
         jodatimeVersion = '2.8.2'
     }
-    
-    
+
+
     dependencies {
         //导入本地的依赖包
-       //compile fileTree(dir: 'libs', include: ['*.jar'])
+        //compile fileTree(dir: 'libs', include: ['*.jar'])
 
         //从maven仓库导入依赖
         compile(
@@ -63,10 +57,14 @@ subprojects {
                 'com.fasterxml.jackson.core:jackson-databind:2.4.6',
                 'dom4j:dom4j:1.6.1',
                 'org.mybatis:mybatis:3.3.0',
-                'com.alibaba:fastjson:1.2.7'
+                'com.alibaba:fastjson:1.2.7',
+                'com.alibaba:druid:1.0.15',
+                'com.github.pagehelper:pagehelper:4.1.3',
+                'mysql:mysql-connector-java:5.1.35',
+                'org.mybatis:mybatis-spring:1.2.5'
 
         )
-        testCompile ("junit:junit:4.12")
+        testCompile("junit:junit:4.12")
     }
 }
 
