--- a/mysite_web/src/main/resources/application.yml
+++ b/mysite_web/src/main/resources/application.yml
@@ -2,11 +2,32 @@ spring:
   thymeleaf:
     cache: false
     mode:  HTML5
-    prefix: /WEB-INF/
+    prefix: /WEB-INF/templates
     template-resolver-order: 1
   mvc:
       favicon:
         enabled: false
+  datasource:
+        name: test
+        url: jdbc:mysql://localhost:3306/mysite
+        username: root
+        password: root
+        # 使用druid数据源
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.jdbc.Driver
+        filters: stat
+        maxActive: 20
+        initialSize: 1
+        maxWait: 60000
+        minIdle: 1
+        timeBetweenEvictionRunsMillis: 60000
+        minEvictableIdleTimeMillis: 300000
+        validationQuery: select 'x'
+        testWhileIdle: true
+        testOnBorrow: false
+        testOnReturn: false
+        poolPreparedStatements: true
+        maxOpenPreparedStatements: 20
 
 logging:
   config: classpath:logback-spring.xml
