Druid数据源 增加 StatViewServlet 监控配置

--- a/mysite_web/src/main/resources/application-development.yml
+++ b/mysite_web/src/main/resources/application-development.yml
@@ -23,6 +23,8 @@ spring:
       poolPreparedStatements: true
       maxOpenPreparedStatements: 20
 
-aliPay:
-   syncLogPath: /var/log/mysite/aliPay_log/sync/
-   aSyncLogPath: /var/log/mysite/aliPay_log/aSync/
+druid:
+  loginUsername: anyfish
+  loginPassword: YzByCg
+  allow:
+  deny:
