--- a/mysite_web/src/main/resources/application-production.yml
+++ b/mysite_web/src/main/resources/application-production.yml
@@ -24,6 +24,8 @@ spring:
         maxOpenPreparedStatements: 20
 
 
-aliPay:
-   syncLogPath: /data/mysite/tools/mysite_logs/aliPay_log/sync/
-   aSyncLogPath: /data/mysite/tools/mysite_logs/aliPay_log/aSync/
+druid:
+  loginUsername: anyfish
+  loginPassword: YzByCg
+  allow:
+  deny:
